WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286926
Invalid WTF::URLs should not convert to NSURLs
https://bugs.webkit.org/show_bug.cgi?id=286926
Summary
Invalid WTF::URLs should not convert to NSURLs
Alex Christensen
Reported
2025-02-03 08:26:53 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-03 08:28:24 PST
<
rdar://problem/144089006
>
Alex Christensen
Comment 2
2025-02-03 08:29:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39912
EWS
Comment 3
2025-02-06 10:49:16 PST
Committed
289946@main
(2404832a74ce): <
https://commits.webkit.org/289946@main
> Reviewed commits have been landed. Closing PR #39912 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug