Invalid WTF::URLs should not convert to NSURLs https://bugs.webkit.org/show_bug.cgi?id=286926

Reviewed by John Wilander.

Creating valid NSURLs from invalid WTF::URLs has long been a source
of issues that we find more targeted fixes for.  We do this over and
over again in different places.  This will fix all of them.

A sprinkling of little fixes is needed to keep some of the failures
the same as they were before, but this also intends to change some
of the URLs accessed after putting them into WebKit when WebKit
thinks they are not valid.

To mitigate the binary compatibility effects of this change, I did
the important changes behind a linkedOnOrAfterSDKWithBehavior check.

* Source/WTF/wtf/cf/URLCF.cpp:
(WTF::URL::createCFURL const):
(WTF::URL::fileSystemPath const):
(WTF::URL::emptyCFURL): Deleted.

Canonical link: https://commits.webkit.org/289946@main